pkg/controller/appdefinition/testdata/networkpolicy/appinstance/expected.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-name
  namespace: app-created-namespace
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              acorn.io/app-namespace: app-namespace
  podSelector:
    matchLabels:
      acorn.io/app-name: app-name
      acorn.io/app-namespace: app-namespace
      acorn.io/managed: "true"
  policyTypes:
    - Ingress
